# de-realtime-fleet-telemetry

./: .dockerignore  .env.example  README.md  compose.yml  pyproject.toml
config/: flink-conf.yaml
docker/: Dockerfile.flink  Dockerfile.generator
docs/architecture/: architecture_design_spec.md  system_topology.md
docs/deployment/: cloud_infrastructure.md
docs/onboarding/: developer_setup.md
docs/reports/: data_operations_governance.md  executive_report.md  report.md
src/: generator.py  pipeline.py
