[project]
name = "de-realtime-fleet-telemetry"
version = "0.1.0"
description = "Real-Time IoT & Fleet Telemetry Ingestion Engine using Kafka, PyFlink, and Redis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[dependency-groups]
generator = [
    "confluent-kafka>=2.3.0",
    "faker>=23.0.0",
]
flink = [
    "apache-flink>=2.3.0",
    "redis>=5.0.1",
    "pyarrow>=14.0.1",
    "boto3>=1.34.0",
]

[tool.uv]
package = false
